--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" sizes="32x32" href="%sveltekit.assets%/favicon.ico">
+		<link rel="icon" type="image/png" sizes="960x960" href="%sveltekit.assets%/favicon.png">
+		<!-- <meta name="theme-color" content="#ffffff"> -->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
