--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,30 @@
 		<!-- <meta name="theme-color" content="#ffffff"> -->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
-	</head>
+		<!-- HTML Meta Tags -->
+<title>profiles</title>
+<meta name="description" content="Social media platforms can be bloated. What about a rich text landing page that's yours to customize?">
+
+
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://profiles.angad.me">
+<meta property="og:type" content="website">
+<meta property="og:title" content="profiles">
+<meta property="og:description" content="Social media platforms can be bloated. What about a rich text landing page that's yours to customize?">
+<meta property="og:image" content="%sveltekit.assets%/ben-sweet-2LowviVHZ-E-unsplash.jpg">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="profiles.angad.me">
+<meta property="twitter:url" content="https://profiles.angad.me">
+<meta name="twitter:title" content="profiles">
+<meta name="twitter:description" content="Social media platforms can be bloated. What about a rich text landing page that's yours to customize?">
+<meta name="twitter:image" content="%sveltekit.assets%/ben-sweet-2LowviVHZ-E-unsplash.jpg">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
+</head>
 	<body data-sveltekit-preload-data="hover" class="bg-background text-foreground border border-border rounded-[var(--radius)] p-4">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
