fix hard-code opengraph image URL

--- a/src/app.html
+++ b/src/app.html
@@ -18,7 +18,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="profiles">
 <meta property="og:description" content="Social media platforms can be bloated. What about a rich text landing page that's yours to customize?">
-<meta property="og:image" content="%sveltekit.assets%/ben-sweet-2LowviVHZ-E-unsplash.jpg">
+<meta property="og:image" content="https://profiles.angad.me/ben-sweet-2LowviVHZ-E-unsplash.jpg">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
@@ -26,7 +26,7 @@
 <meta property="twitter:url" content="https://profiles.angad.me">
 <meta name="twitter:title" content="profiles">
 <meta name="twitter:description" content="Social media platforms can be bloated. What about a rich text landing page that's yours to customize?">
-<meta name="twitter:image" content="%sveltekit.assets%/ben-sweet-2LowviVHZ-E-unsplash.jpg">
+<meta name="twitter:image" content="https://profiles.angad.me/ben-sweet-2LowviVHZ-E-unsplash.jpg">
 
 <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
